--- a/srcs/css/indexStyle.css
+++ b/srcs/css/indexStyle.css
@@ -9,10 +9,30 @@ body {
 }
 
 .sign-btn {
-    margin-left: 15px;
     color: #ffc810;
-    border-color: #ffc810;
+    border-color: black;
+    background-color: black;
     
+}
+
+.passwordReset {
+    text-decoration: underline;
+    color: black;
+}
+
+.enter-btn {
+    color: black;
+    border-color: #ffc810;
+    background-color: #ffc810;
+    width: 100%;
+}
+
+.signUp-btn {
+    color: #ffc810;
+    border-color: black;
+    background-color: black;
+    width: 100%;
+
 }
 
 .img-sizing {
@@ -26,17 +46,14 @@ body {
 }
 
 .signature {
-    display: flex;
-    flex-flow: column;
-    align-items: center;
     color: #ffc810;
+    align-items: center;
     
 }
  
-.letsgo-form {
-    width: 880px;
+.signature h3 {
+    text-align: center;
 }
-
 
 .lets-btn {
     color: #ffc810;
@@ -44,12 +61,72 @@ body {
     
 }
 
-.infos {
-    padding: 80px;
+.card-img-top{
+    height: 100px;
 }
 
-.card-img-top{
-    height: 120px;
+.card-sizing {
+    min-height: 18rem;
+    max-width: 18rem;
+}
+
+
+.fQuestions {
+    
+    color: #ffc810;
+    flex-flow: column;
+    text-align: center;
+    
+    
+}
+.card-header {
+    background-color: #131313;
+
+}
+
+.fQuestions h2 {
+    font-weight: bolder;
+    
+}
+
+.fQcard {
+    color: white;
+    max-width: 50rem;
+    min-width: 50rem;
+    background-color: #131313;  
+    flex-flow: column;
+}
+
+.fQcard:active{
+    border: none
+}
+
+.fQtext {
+    color: #ffc810;
+    text-decoration: none;
+    font-size: 22px;
+    background-color: #131313;
+
+
+}
+
+.fQtext:hover {
+    color: #ffc810;
+    text-decoration: none;
+    font-weight: bold
+
+}
+
+.modal-btn {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+}
+
+.modal-footer {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
 }
 
 footer {
@@ -66,3 +143,22 @@ footer {
     width: 100%;
     box-sizing: border-box;
   }
+
+@media (max-width: 850px) {
+
+    .sign-btn {
+        width: 100%;
+    }
+
+    .search-btn {
+        width: 100%;
+    }
+
+    .modal-sizing {
+        width: 90%;
+    }
+    .fQcard {
+        min-width: auto;
+    }
+
+}
