Correção de bugs e erros

--- a/srcs/css/crewStyle.css
+++ b/srcs/css/crewStyle.css
@@ -43,6 +43,26 @@ main {
 
 }
 
+.signUp-btn a {
+    text-decoration: none;
+    color: #ffc810;
+
+}
+
+.signUp-btn:hover {
+    background-color: #ffc810;
+    color: black;
+    width: 100%;
+    
+}
+
+.signUp-btn a:hover {
+    text-decoration: none;
+    color: black;
+
+}
+
+
 .Crew {
     color: #ffc810;
 }
@@ -112,12 +132,17 @@ footer {
         width: 100%;
     }
 
-    .modal-sizing {
-        width: 90%;
-    }
-
     .memberContact {
         min-width: auto;
     }
 
+    .dropdown {
+        width: 98% !important;
+    }
+
+    .dropdown-menu-right {
+        left: 0;
+        right: auto;
+        
+    }
 }
