--- a/srcs/css/moviesStyle.css
+++ b/srcs/css/moviesStyle.css
@@ -39,6 +39,26 @@ body {
 
 }
 
+.signUp-btn a {
+    text-decoration: none;
+    color: #ffc810;
+
+}
+
+.signUp-btn:hover {
+    background-color: #ffc810;
+    color: black;
+    width: 100%;
+    
+}
+
+.signUp-btn a:hover {
+    text-decoration: none;
+    color: black;
+
+}
+
+
 .moviesSelect {
     background-color: #131313;
 }
@@ -117,11 +137,20 @@ footer {
         width: 100%;
     }
 
-    .modal-sizing {
-        width: 90%;
-    }
+
     .fQcard {
         min-width: auto;
     }
 
+    .dropdown {
+        width: 98% !important;
+    }
+
+    .dropdown-menu-right {
+        left: 0;
+        right: auto;
+        
+    }
+
 }
+
