--- a/srcs/css/pResetStyle.css
+++ b/srcs/css/pResetStyle.css
@@ -43,6 +43,26 @@ main {
 
 }
 
+.signUp-btn a {
+    text-decoration: none;
+    color: #ffc810;
+
+}
+
+.signUp-btn:hover {
+    background-color: #ffc810;
+    color: black;
+    width: 100%;
+    
+}
+
+.signUp-btn a:hover {
+    text-decoration: none;
+    color: black;
+
+}
+
+
 
 .memberContact {
     color: #ffc810;
@@ -65,11 +85,6 @@ main {
     align-items: center;
 }
 
-.modal-footer {
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-}
 
 footer {
     position: absolute;
@@ -96,12 +111,18 @@ footer {
         width: 100%;
     }
 
-    .modal-sizing {
-        width: 90%;
-    }
-
     .memberContact {
         min-width: auto;
+    }
+
+    .dropdown {
+        width: 98% !important;
+    }
+
+    .dropdown-menu-right {
+        left: 0;
+        right: auto;
+        
     }
 
 }
