--- a/srcs/css/404Style.css
+++ b/srcs/css/404Style.css
@@ -43,6 +43,25 @@ main {
 
 }
 
+.signUp-btn a {
+    text-decoration: none;
+    color: #ffc810;
+
+}
+
+.signUp-btn:hover {
+    background-color: #ffc810;
+    color: black;
+    width: 100%;
+    
+}
+
+.signUp-btn a:hover {
+    text-decoration: none;
+    color: black;
+
+}
+
 
 .msgArea {
     color: #ffc810;
@@ -92,12 +111,18 @@ footer {
         width: 100%;
     }
 
-    .modal-sizing {
-        width: 90%;
-    }
-
     .memberContact {
         min-width: auto;
+    }
+
+    .dropdown {
+        width: 98% !important;
+    }
+
+    .dropdown-menu-right {
+        left: 0;
+        right: auto;
+        
     }
 
 }
