--- a/srcs/css/pResetStyle.css
+++ b/srcs/css/pResetStyle.css
@@ -40,6 +40,13 @@ main {
     width: 100%;
 }
 
+.enter-btn:hover {
+    color: #ffc810;
+    border-color: #ffc810;
+    background-color: #131313;
+    
+}
+
 .signUp-btn {
     color: #ffc810;
     border-color: black;
