Implementação do modal em diversas páginas, correção de erros e bugs.

--- a/srcs/css/indexStyle.css
+++ b/srcs/css/indexStyle.css
@@ -33,7 +33,7 @@ body {
     color: black;
     border-color: #ffc810;
     background-color: #ffc810;
-    width: 100%;
+    width: 155px;
 }
 
 .signUp-btn {
