--- a/srcs/css/pResetStyle.css
+++ b/srcs/css/pResetStyle.css
@@ -1,172 +1,160 @@
 body {
-    background-color: black;
-    
+	background-color: black;
 }
 
 main {
-    margin-top: 100px;
+	margin-top: 100px;
 }
 
 .navbar {
-    background-color: #ffc810;
+	background-color: #ffc810;
 }
 
 .nav-text {
-    font-family: 'Grand Hotel', cursive;
-    font-size: 30px;
+	font-family: "Grand Hotel", cursive;
+	font-size: 30px;
 }
 
 .sign-btn {
-    background-color: black;
-    border-color: none;
-    
+	background-color: black;
+	border-color: none;
 }
 
 .sign-btn:hover {
-    background-color: #ffc810;
-    border-color: #131313;
-    
+	background-color: #ffc810;
+	border-color: #131313;
 }
 
 .passwordReset {
-    text-decoration: underline;
-    color: black;
+	text-decoration: underline;
+	color: black;
 }
 
 .enter-btn {
-    color: black;
-    border-color: #ffc810;
-    background-color: #ffc810;
-    width: 100%;
+	color: black;
+	border-color: #ffc810;
+	background-color: #ffc810;
+	width: 100%;
 }
 
 .enter-btn:hover {
-    color: #ffc810;
-    border-color: #ffc810;
-    background-color: #131313;
-    
+	color: #ffc810;
+	border-color: #ffc810;
+	background-color: #131313;
 }
 
 .signUp-btn {
-    color: #ffc810;
-    border-color: black;
-    background-color: black;
-    width: 100%;
-
+	color: #ffc810;
+	border-color: black;
+	background-color: black;
+	width: 100%;
 }
 
 .signUp-btn a {
-    text-decoration: none;
-    color: #ffc810;
-
+	text-decoration: none;
+	color: #ffc810;
 }
 
 .signUp-btn:hover {
-    background-color: #ffc810;
-    color: black;
-    width: 100%;
-    
+	background-color: #ffc810;
+	color: black;
+	width: 100%;
 }
 
 .signUp-btn a:hover {
-    text-decoration: none;
-    color: black;
-
+	text-decoration: none;
+	color: black;
 }
 
 .modal-header {
-    background-color: #ffc810;
-    color: black;
-
+	background-color: #ffc810;
+	color: black;
 }
 
 .modal-footer {
-    background-color: #131313;
-    color: #ffc810;
+	background-color: #131313;
+	color: #ffc810;
 }
 
-
-
 .memberSearch {
-    color: #131313;
-    max-width: 45%;
-
+	color: #131313;
+	max-width: 45%;
 }
 
 .lets-btn {
-    color: black;
-    background-color: #ffc810;
-    border: none;
-    
+	color: black;
+	background-color: #ffc810;
+	border: none;
 }
 
 .lets-btn:hover {
-    color: #ffc810;
-    background-color: black;
-    border-color: #ffc810;
+	color: #ffc810;
+	background-color: black;
+	border-color: #ffc810;
 }
 
-
 .memberContact {
-    color: #ffc810;
-    min-width: 600px;
-    background-color: #131313;
-
+	color: #ffc810;
+	min-width: 600px;
+	background-color: #131313;
 }
 
 .send-btn {
-    color: black;
-    border-color: #ffc810;
-    background-color: #ffc810;
-    width: 100%;
-    
+	color: black;
+	border-color: #ffc810;
+	background-color: #ffc810;
+	width: 100%;
 }
 
 .drop-btn {
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    width: 155px;
+	display: flex;
+	flex-flow: column;
+	align-items: center;
+	width: 155px;
 }
 
+.alert-color {
+	color: red;
+}
+
+small {
+	font-style: italic;
+}
 
 footer {
-    position: absolute;
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    text-align: center;
-    padding: 5px;
-    padding-top: 10px;
-    background-color: #ffc810;
-    color: black;
-    margin-bottom: 0px;
-    width: 100%;
-    box-sizing: border-box;
-  }
+	position: absolute;
+	display: flex;
+	flex-flow: column;
+	align-items: center;
+	text-align: center;
+	padding: 5px;
+	padding-top: 10px;
+	background-color: #ffc810;
+	color: black;
+	margin-bottom: 0px;
+	width: 100%;
+	box-sizing: border-box;
+}
 
 @media (max-width: 850px) {
+	.sign-btn {
+		width: 100%;
+	}
 
-    .sign-btn {
-        width: 100%;
-    }
+	.search-btn {
+		width: 100%;
+	}
 
-    .search-btn {
-        width: 100%;
-    }
+	.memberContact {
+		min-width: auto;
+	}
 
-    .memberContact {
-        min-width: auto;
-    }
+	.dropdown {
+		width: 98% !important;
+	}
 
-    .dropdown {
-        width: 98% !important;
-    }
-
-    .dropdown-menu-right {
-        left: 0;
-        right: auto;
-        
-    }
-
+	.dropdown-menu-right {
+		left: 0;
+		right: auto;
+	}
 }
