--- a/srcs/css/loginStyle.css
+++ b/srcs/css/loginStyle.css
@@ -1,69 +1,70 @@
 body {
-    background-color: black;
-    
+	background-color: black;
 }
 
 main {
-    margin-top: 100px;
+	margin-top: 100px;
 }
 
 .navbar {
-    background-color: #ffc810;
+	background-color: #ffc810;
 }
 
 .nav-text {
-    font-family: 'Grand Hotel', cursive;
-    font-size: 30px;
+	font-family: "Grand Hotel", cursive;
+	font-size: 30px;
 }
 
 .msgArea {
-    color: #ffc810;
-    min-width: 600px;
-    background-color: #131313;
-
+	color: #ffc810;
+	min-width: 600px;
+	background-color: #131313;
 }
 
 .memberContact {
-    color: #ffc810;
-    
-
+	color: #ffc810;
 }
 
 .send-btn {
-    color: black;
-    border-color: #ffc810;
-    background-color: #ffc810;
-    width: 100%;
-    
+	color: black;
+	border-color: #ffc810;
+	background-color: #ffc810;
+	width: 380px;
 }
 
 .send-btn:hover {
-    background-color: #131313;
-    color: #ffc810;
-    border-color: #ffc810;
+	background-color: #131313;
+	color: #ffc810;
+	border-color: #ffc810;
 }
 
 .passwordReset {
-    color: #ffc810;
-    
+	color: #ffc810;
 }
 
 .passwordReset:hover {
-    color: #ffc810;
+	color: #ffc810;
+}
+
+.alert-color {
+	color: red;
+}
+
+small {
+	font-style: italic;
 }
 
 footer {
-    position: absolute;
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    text-align: center;
-    padding: 5px;
-    padding-top: 10px;
-    background-color: #ffc810;
-    color: black;
-    margin-bottom: 0px;
-    width: 100%;
-    box-sizing: border-box;
-  }
-
+	position: absolute;
+	display: flex;
+	flex-flow: column;
+	align-items: center;
+	text-align: center;
+	padding: 5px;
+	padding-top: 10px;
+	background-color: #ffc810;
+	color: black;
+	margin-bottom: 0px;
+	width: 100%;
+	box-sizing: border-box;
+}
