--- a/srcs/css/loginStyle.css
+++ b/srcs/css/loginStyle.css
@@ -55,7 +55,8 @@ small {
 }
 
 footer {
-	position: absolute;
+	position: fixed;
+	bottom: 0;
 	display: flex;
 	flex-flow: column;
 	align-items: center;
