--- a/srcs/css/mSearchStyle.css
+++ b/srcs/css/mSearchStyle.css
@@ -152,7 +152,8 @@ main {
 }
 
 footer {
-    position: absolute;
+    position: fixed;
+    bottom: 0;
     display: flex;
     flex-flow: column;
     justify-content: end;
