--- a/srcs/css/404Style.css
+++ b/srcs/css/404Style.css
@@ -41,7 +41,7 @@ main {
 
 
 footer {
-    position: absolute;
+    position: fixed;
     display: flex;
     flex-flow: column;
     align-items: center;
